修复发生Ssl错误时, 页面加载不完整而导致嗅探失败的bug

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,7 @@ android {
         // Specifies the ABI configurations of your native
         // libraries Gradle should build and package with your APK.//"armeabi", "armeabi-v7a", "x86", "mips"
         ndk {
-            abiFilters "armeabi-v7a"
+            abiFilters "x86"
         }
     }
 
