--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,5 @@ ANDROID_BUILD_TARGET_SDK_VERSION=27
 ANDROID_BUILD_TOOLS_VERSION=27.0.3
 ANDROID_BUILD_SDK_VERSION=27
 ANDROID_APPCOMPAT=com.android.support:appcompat-v7:27.0.1
+
+org.gradle.jvmargs=-Xmx2048M
