--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ buildscript {
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.0'
+        classpath 'com.android.tools.build:gradle:3.4.2'
         classpath 'com.android.tools.build:transform-api:1.5.+'
         classpath 'org.javassist:javassist:3.21.+'
         classpath 'commons-io:commons-io:2.4'
@@ -23,8 +23,8 @@ repositories {
 }
 
 android {
-    compileSdkVersion Integer.parseInt(project.ANDROID_BUILD_SDK_VERSION)
-    buildToolsVersion project.ANDROID_BUILD_TOOLS_VERSION
+    compileSdkVersion project.ext.androidBuildSdkVersion
+    buildToolsVersion project.ext.androidBuildToolsVersion
     flavorDimensions "default"
     productFlavors {
         armv7 {
@@ -55,10 +55,10 @@ android {
 
     defaultConfig {
         applicationId "com.xm.vbrowser.app"
-        minSdkVersion Integer.parseInt(project.ANDROID_BUILD_MIN_SDK_VERSION)
-        targetSdkVersion Integer.parseInt(project.ANDROID_BUILD_TARGET_SDK_VERSION)
-        versionCode 7
-        versionName "1.6"
+        minSdkVersion project.ext.androidBuildMinSdkVersion
+        targetSdkVersion project.ext.androidBuildTargetSdkVersion
+        versionCode 8
+        versionName "2.0"
 
 
         // Specifies the ABI configurations of your native
@@ -81,7 +81,7 @@ android {
 }
 
 dependencies {
-    implementation  project.ANDROID_APPCOMPAT
+    implementation  project.ext.androidAppcompat
     implementation  'org.greenrobot:eventbus:3.0.0'
     implementation  'q.rorbin:badgeview:1.1.2'
     implementation  'com.alibaba:fastjson:1.1.62.android'
